--- a/src/components/CategoryList/CategoryList.css
+++ b/src/components/CategoryList/CategoryList.css
@@ -70,43 +70,10 @@
   overflow-y: auto;
 }
 
-.category-list .categories-container::-webkit-scrollbar {
-  width: 10px;
-}
-
-.category-list .categories-container::-webkit-scrollbar-track {
-  background-color: var(--placeholder);
-  border-radius: 5px;
-  margin: 18px;
-}
-
-.category-list .categories-container::-webkit-scrollbar-thumb {
-  background-color: var(--contrast01);
-  border-radius: 5px;
-}
-
-.category-list .categories-container::-moz-scrollbar {
-  width: 10px;
-}
-
-.category-list .categories-container::-moz-scrollbar-track {
-  background-color: var(--placeholder);
-  border-radius: 5px;
-}
-
-.category-list .categories-container::-moz-scrollbar-thumb {
-  background-color: var(--contrast01);
-  border-radius: 5px;
-}
-
 .category-list .category-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 100%;
   height: 50px;
   border-radius: 50px;
-  padding: 0 1.5rem;
   cursor: pointer;
   transition: all .1s ease-in;
   flex-shrink: 0;
@@ -115,8 +82,21 @@
     background-color: var(--contrast01);
     color: var(--bg-element);
   }
-  &:active{
+
+  &:active {
     background-color: var(--text-main);
     transform: scale(0.99);
   }
+}
+
+.category-list a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0 1.5rem;
+  text-decoration: none;
+  color: currentColor;
+  background-color: transparent;
 }
