--- a/src/components/MealList/MealList.css
+++ b/src/components/MealList/MealList.css
@@ -1,33 +1,49 @@
 .meal-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: space-around;
+  gap: 2rem;
+  padding: 2rem;
+  padding-left: 0;
+  justify-content: space-evenly;
+  max-height: 100vh;
+  overflow-x: auto;
+  background-color: var(--bg-main);
+}
+
+.meal-list a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .meal-list p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  margin: 0;
-  padding: 10px 0;
-  background-color: #52529898; 
+  padding: 1rem;
+  padding-top: .5rem;
+  font-size: 1.1rem;
 }
 
 .meal-list .meal-contenedor {
-  width: 200px;
-  margin: 15px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+  max-width: 300px;
+  min-width: 170px;
+  border-radius: var(--radius);
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s;
+  transition: all 0.3s;
+  background-color: var(--bg-element);
+
+  &:hover {
+    background-color: var(--contrast01);
+    color: var(--bg-main)
+  }
 }
 
 .meal-list .meal-contenedor:hover {
-  transform: scale(1.15);
+  transform: scale(1.03);
 }
 
 .meal-list .meal-contenedor img {
   width: 100%;
-  height: 100;
-  display: block;
 }
