--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,49 @@
   --input-radius: 0.8rem;
 }
 
-#root {
+body, html, #root, .app {
+  min-width: 100vw;
+  min-height: 100vh;
+}
+
+.app {
   font-family: 'Poppins', sans-serif;
   color: var(--text-main);
   display: flex;
+  overflow: hidden;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--placeholder);
+  border-radius: 5px;
+  margin: 18px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--contrast01);
+  border-radius: 5px;
+}
+
+::-moz-scrollbar {
+  width: 10px;
+}
+
+::-moz-scrollbar-track {
+  background-color: var(--placeholder);
+  border-radius: 5px;
+}
+
+::-moz-scrollbar-thumb {
+  background-color: var(--contrast01);
+  border-radius: 5px;
 }
