--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -9,10 +9,10 @@
 .loader {
   margin: 0 auto;
   width: calc(100% / 7);
-  height: calc(100% / 7);
+  height: auto;
   aspect-ratio: 1;
   border-radius: 50%;
-  border: calc(100% / 7) solid #514b82;
+  border: calc(100vw / 60) solid #514b82;
   animation:
     l20-1 0.8s infinite linear alternate,
     l20-2 1.6s infinite linear;
