--- a/src/components/MealDetails/MealDetails.css
+++ b/src/components/MealDetails/MealDetails.css
@@ -2,13 +2,17 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  min-width: 360px;
   gap: 2rem;
   background-color: var(--bg-main);
   padding: 2rem;
   padding-left: 0;
   overflow-y: scroll;
+  transition: all .5s ease-in;
 }
-
+.meal-details.padding {
+  padding-left: 2rem;
+}
 .meal-photo-container {
   text-align: center;
   position: relative;
@@ -85,4 +89,15 @@
   width: 100% !important;
   min-height: 500px;
   border-radius: var(--radius);
+}
+
+@media screen and (max-width: 1100px) {
+  .meal-grid {
+    flex-direction: column;
+  }
+
+  .meal-instruction,
+  .meal-ingredients-container {
+    width: 100%;
+  }
 }
